modify about us article

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class='container'>
           <article class="intro-past">
             <h1>關於我們</h1>
-            <p class="article-content">創立於 1998 年，本業是製造卡拉 OK 機器的硬體代工起家，也許你沒聽過我們的名字，但台灣第一大家用卡啦 OK 機廠牌金嗓、音圓都是德恩主要的客戶。從去年六月開始，德恩資訊也正式投入音樂相關 App 和雲端資料庫相關產業，並與北美第一大卡啦 OK 內容商  Digitrax 成為合作夥伴。
+            <p class="article-content">創立於 1998 年，本業是從事 Karaoke 的嵌入式系統軟硬體研發製造, 國內家用營業用的主要供應商。從去年六月開始，德恩資訊也正式投入音樂相關 App 和雲端資料庫相關產業，並與北美第一大的音樂內容製作及版權商 Digitrax 成為合作夥伴。
             </p>
           </article>
           <div class="intro-past-img">
