add new item to google form

--- a/index.html
+++ b/index.html
@@ -322,28 +322,71 @@
 <span class="ss-required-asterisk">*</span></div>
 <div class="ss-q-help ss-secondary-text" dir="ltr"></div></label>
 <input type="text" name="entry.1606820294" value="" class="ss-q-short" id="entry_1606820294" dir="auto" aria-label="email  您的 email 格式不符" aria-required="true" required="" pattern="[a-z0-9!#$%&amp;amp;'*+/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&amp;amp;'*+/=?^_`{|}~-]+)*@(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?" title="您的 email 格式不符">
-<div class="error-message"></div>
+<div class="error-message">您的 email 格式不符</div>
 <div class="required-message">這是必填問題</div>
 </div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
-<div dir="ltr" class="ss-item ss-item-required ss-paragraph-text"><div class="ss-form-entry">
-<label class="ss-q-item-label" for="entry_1339105639"><div class="ss-q-title">履歷 / 作品集 連結
+<div dir="ltr" class="ss-item ss-item-required ss-radio"><div class="ss-form-entry">
+<label class="ss-q-item-label" for="entry_58877266"><div class="ss-q-title">想參與的部分
 <label for="itemView.getDomIdToLabel()" aria-label="(必填欄位)"></label>
 <span class="ss-required-asterisk">*</span></div>
 <div class="ss-q-help ss-secondary-text" dir="ltr"></div></label>
-<textarea name="entry.1339105639" rows="8" cols="0" class="ss-q-long" id="entry_1339105639" dir="auto" aria-label="履歷 / 作品集 連結  " aria-required="true" required=""></textarea>
+
+<ul class="ss-choices" role="radiogroup" aria-label="想參與的部分  "><li class="ss-choice-item"><label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.1808428632" value="產品企劃" id="group_1808428632_1" role="radio" class="ss-q-radio" aria-label="產品企劃" required="" aria-required="true"></span>
+<span class="ss-choice-label">產品企劃</span>
+</label></li> <li class="ss-choice-item"><label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.1808428632" value="前端與設計" id="group_1808428632_2" role="radio" class="ss-q-radio" aria-label="前端與設計" required="" aria-required="true"></span>
+<span class="ss-choice-label">前端與設計</span>
+</label></li> <li class="ss-choice-item"><label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.1808428632" value="後端開發" id="group_1808428632_3" role="radio" class="ss-q-radio" aria-label="後端開發" required="" aria-required="true"></span>
+<span class="ss-choice-label">後端開發</span>
+</label></li></ul>
+<div class="error-message"></div>
+<div class="required-message">這是必填問題</div></div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
+<div dir="ltr" class="ss-item ss-item-required ss-radio"><div class="ss-form-entry">
+<label class="ss-q-item-label" for="entry_695775393"><div class="ss-q-title">能參與的時間
+<label for="itemView.getDomIdToLabel()" aria-label="(必填欄位)"></label>
+<span class="ss-required-asterisk">*</span></div>
+<div class="ss-q-help ss-secondary-text" dir="ltr"></div></label>
+
+<ul class="ss-choices" role="radiogroup" aria-label="能參與的時間  "><li class="ss-choice-item"><label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.1160773773" value="暑期" id="group_1160773773_1" role="radio" class="ss-q-radio" aria-label="暑期" required="" aria-required="true"></span>
+<span class="ss-choice-label">暑期</span>
+</label></li> <li class="ss-choice-item"><label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.1160773773" value="暑期 + 上學期" id="group_1160773773_2" role="radio" class="ss-q-radio" aria-label="暑期 + 上學期" required="" aria-required="true"></span>
+<span class="ss-choice-label">暑期 + 上學期</span>
+</label></li> <li class="ss-choice-item"><label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.1160773773" value="暑期 + 上學期 ＋下學期" id="group_1160773773_3" role="radio" class="ss-q-radio" aria-label="暑期 + 上學期 ＋下學期" required="" aria-required="true"></span>
+<span class="ss-choice-label">暑期 + 上學期 ＋下學期</span>
+</label></li></ul>
+<div class="error-message"></div>
+<div class="required-message">這是必填問題</div></div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
+<div dir="ltr" class="ss-item ss-item-required ss-radio"><div class="ss-form-entry">
+<label class="ss-q-item-label" for="entry_200883687"><div class="ss-q-title">是否有自備筆電
+<label for="itemView.getDomIdToLabel()" aria-label="(必填欄位)"></label>
+<span class="ss-required-asterisk">*</span></div>
+<div class="ss-q-help ss-secondary-text" dir="ltr"></div></label>
+
+<ul class="ss-choices" role="radiogroup" aria-label="是否有自備筆電  "><li class="ss-choice-item"><label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.710641502" value="是" id="group_710641502_1" role="radio" class="ss-q-radio" aria-label="是" required="" aria-required="true"></span>
+<span class="ss-choice-label">是</span>
+</label></li> <li class="ss-choice-item"><label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.710641502" value="否" id="group_710641502_2" role="radio" class="ss-q-radio" aria-label="否" required="" aria-required="true"></span>
+<span class="ss-choice-label">否</span>
+</label></li></ul>
+<div class="error-message"></div>
+<div class="required-message">這是必填問題</div></div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
+<div dir="ltr" class="ss-item ss-item-required ss-paragraph-text"><div class="ss-form-entry">
+<label class="ss-q-item-label" for="entry_1339105639"><div class="ss-q-title">履歷 / 作品集 連結 或 主修科系 / 專長
+<label for="itemView.getDomIdToLabel()" aria-label="(必填欄位)"></label>
+<span class="ss-required-asterisk">*</span></div>
+<div class="ss-q-help ss-secondary-text" dir="ltr"></div></label>
+<textarea name="entry.1339105639" rows="8" cols="0" class="ss-q-long" id="entry_1339105639" dir="auto" aria-label="履歷 / 作品集 連結 或 主修科系 / 專長  " aria-required="true" required=""></textarea>
 <div class="error-message"></div>
 <div class="required-message">這是必填問題</div>
 </div></div></div>
-<input type="hidden" name="draftResponse" value="[,,&quot;4857458521239883570&quot;]
+<input type="hidden" name="draftResponse" value="[,,&quot;5452935711165923545&quot;]
 ">
 <input type="hidden" name="pageHistory" value="0">
 
 
-<input type="hidden" name="fbzx" value="4857458521239883570">
+<input type="hidden" name="fbzx" value="5452935711165923545">
 
 <div class="ss-item ss-navigate"><table id="navigation-table"><tbody><tr><td class="ss-form-entry goog-inline-block" id="navigation-buttons" dir="ltr">
-<input type="submit" name="submit" value="報名" id="ss-submit">
-<div class="ss-password-warning ss-secondary-text">按下跳出說明即送出完成</div></td>
+<input type="submit" name="submit" value="提交" id="ss-submit">
+<div class="ss-password-warning ss-secondary-text">請勿透過 Google 表單送出密碼。</div></td>
 </tr></tbody></table></div></ol></form></div>
           </div>
         </div>
