update deadline time

--- a/index.html
+++ b/index.html
@@ -41,6 +41,35 @@
       <a href="#" class="down-arrow"><i class="fa fa-angle-down"></i></a>
     </section>
     <div class="content">
+      <section id="time" class="timeline">
+        <div class='container'>
+          <article class="intro-time">
+            <h1>招募時程</h1>
+            <ul>
+              <li><h3>申請期限</h3>
+                <ul>
+                  <li>即日起至 6.20</li>
+                </ul>
+              </li>
+              <li><h3>面談期間</h3>
+                <ul>
+                  <li>6.24 ~ 6.26</li>
+                </ul>
+              </li>
+              <li><h3>通知錄取</h3>
+                <ul>
+                  <li>6.27</li>
+                </ul>
+              </li>
+              <li><h3>開始實習</h3>
+                <ul>
+                  <li>七月第一週（確切時間由人事決定）</li>
+                </ul>
+              </li>
+            </ul>  
+          </article>
+        </div>
+      </section>
       <section id="about" class="intro-past-wrapper">
         <div class='container'>
           <article class="intro-past">
