--- a/index.html
+++ b/index.html
@@ -41,6 +41,29 @@
       <a href="#" class="down-arrow"><i class="fa fa-angle-down"></i></a>
     </section>
     <div class="content">
+      <section id="result">
+        <div class='container'>
+          <article class="result-update">
+            <h1>結果公布</h1>
+            <ul>
+              <li><h3>錄取人數</h3>
+                <ul>
+                  <li>5 人</li>
+                </ul>
+              </li>
+              <li><h3>錄取人員</h3>
+                <ul>
+                  <li>田◯立</li>
+                  <li>林◯進</li>
+                  <li>莊◯銘</li>
+                  <li>陳◯璽</li>
+                  <li>林◯豪</li>
+                </ul>
+              </li>
+            </ul> 
+          </article>
+        </div>
+      </section>
       <section id="time" class="timeline">
         <div class='container'>
           <article class="intro-time">
